# configuration

./: .aliases  .bashrc  .gitconfig  .gitignore  .gitmodules  LICENSE  Makefile  README.md  TODO.txt  VirtualBox.md  bootstrap.nix  compile-configuration.sh  compile-dhall-configuration.sh  configuration-cp.sh  configuration.dhall  configuration.sh  notes.txt  old.txt  packages.txt  reconfigure-privileged.sh  run-manual-symlinks.sh  run-symlinks.sh  setup.sh  sox-convert-wav  start.sh  symlink.sh  xfce-config-2018-10-19.tar.bz2  xfce-config-2018-11-19.tar.bz2.tar.bz2
applications/aspell/: aspell.conf  en.pws  mtg.en.pws
apt/: packages.txt
archives/.config/: QtProject.conf  mimeapps.list  pavucontrol.ini
argos/scripts/: shell_log.1s.sh
autostart/: REAMDE.md
autostart/autostart/: sboo.sh
backup/: backup.sh  exclusions.txt  inclusions.txt
bash/: .aliases  .bash_aliases  .bash_aliases.sh  .bash_definitions.sh  .bash_emacs.sh  .bash_login  .bash_once.sh  .bash_settings  .bash_settings.sh  .bashrc  .profile  README.md  aliases  bash.nix  bash_aliases  bash_definitions  bash_emacs  bash_login  bash_prompt  bash_settings  notes.txt  terminal-emulator.sh  xkb_base_rules.lst
bash/completion/: cabal.bash  cask  emacs.bash  emacsclient  home-manager  home-manager.bash  home.nix  pandoc  sboo-home-manager-archive  xbindkeys  xbindkeys_show
bash/interactive-shell/: .bashrc
bash/login-shell/: .profile
cabal/: config.yaml
completions/: github-repositories-sboosali_2018-10-26.txt  sboo-github-clone-sboosali.bash
config/argos/: argos  launcher.sh
configs/nixpkgs/: config.nix  home-attrs.nix  home-noattrs.nix
data/aspell/: en.pws
data/default/: Makefile
data/haskell/: Makefile
desktop/: firefox.desktop  link.sh  pinned.sh  update.sh
desktop-entry-files/: alacritty-terminal.desktop  emacs.desktop  google-chrome.desktop  sboo-emacs.desktop  terminal.desktop  urxvt.desktop  xterm-terminal.desktop  xterm.desktop
desktop/ubutnu/: firefox-nightly.desktop
dhall/: README.txt  compile-dhall-configuration-continuously.sh  configuration.dhall  links.dhall
dictation/: DICTATION.md  NOTES.md  skeletor  skeletor.ini
dictation/docs/: lsusb_058f:6254.txt  lsusb_058f:6366.txt  lsusb_8c00:3c00.txt
dictation/scripts/: add-user.sh
dictation/src/: .ghc.environment.x86_64-linux-8.6.4  Makefile  cabal.project  dictation-vocabulary.cabal  dictation-vocabulary.hs
docs/: HOME-MANAGER.md  NOTES.md  Old.txt  clipboard_home-manager.txt
docs/code/: ghc-binary.nix  home-manager  xbindkeysrc.scm
docs/home-manager/: CONTRIBUTING.md  Makefile  system-programs.nix
docs/notes/: installion.txt  notes.txt  upgrade.txt
docs/stdout/: apt-install.txt  environment-useful.txt  find-png-files-in-user-share-icons-paper.txt  nix-query-star-local.txt  nix-show-config_initial.txt  nix-version_initial.txt  terminfo.txt  xdpyinfo.txt  xev.txt  xlsclients_-a.txt  xlsclients_-la.txt
files/: xinitrc
fonts/: README.md
ghci/: ghci.conf
git/: .gitconfig
gnome/: application_state  restart-gnome.sh
home-manager/: NOTES.md  REAMDE.md  bootstrap.sh
home-manager/bash/: .profile  bashrc.sh  completion.bash  inputrc.sh  profile.sh
home-manager/cabal/: config.project
home-manager/configs/: nix.conf
home-manager/desktop/: dropbox.desktop  emacs.desktop  firefox.desktop  sboo-screen.desktop  terminal.desktop
home-manager/docs/: IMPLEMENTATION.md  NOTES.md  Old.txt  man_home-configuration-dot-nix.txt
home-manager/haskell/: dot-ghci.hs
home-manager/init/: sboo-init-gpg.sh  sboo-init-nix-channels.sh  sboo-init-pass.sh  sboo-init-virtualbox.sh
home-manager/minimal/: home.nix
home-manager/nix/: default.nix  home-files.nix  home.nix  libraries.nix  nix-channels.txt  packages.nix  programs.nix  services.nix
home-manager/offline/: home.nix
kde/: files.yaml  keyboard-shortcut-settings.txt  notes.txt  update.sh
kde/run-commands/: breezerc  jukrc  kcminputrc  kglobalshortcutsrc  kwinrc  plasmarc
key-pad/CP24_ControlPad_Genovation/: notes.txt
locale/: default-locale.sh  update.sh
misc/backup/: exclusions.txt
nix/: config.nix  environment-useful.txt  global-nix.conf  nix-profile-bin.txt  notes.txt  overlays.nix  packages.nix  packages.txt
nix/environment/: default.nix  environment-everything.txt  environment-useful-nameOnly-versionAny.txt  environment.nix  programs.nix
nix/etc/: nix.conf
nix/notes/: ariya.nix  config.nix  home.nix  taktoa-config.nix  taktoa-nixpkgs.nix  taktoa-packages.nix  taktoa-shell.nix
nix/overlays/: check-nix.sh  emacs.nix  environment.nix  haskell-compilers.nix  haskell-sboo.nix  haskell.nix  lnl.nix  new-nix-overlay.sh  sboo.nix  stackage-overlay.nix  utilities.nix
nixos/: configuration.nix
nixpkgs/: get-current-git-commit.sh  nixpkgs.json  revision.txt
notes/: cabal.project  installion.txt  packages.txt
old/: cabal.bash
old/dhall/: links.dhall
resume/: Makefile  README.md  default.nix  resume.nix  resume.tex
resume/1/: Makefile  (+2 more)
scripts/: add-submodule.sh  apt-update.sh  bootstrap.sh  chown-authority-files.sh  configuration-nix.sh  configuration.sh  find-file  find-grep  home-manager-switch.sh  initialize.sh  install-programs.sh  install-signal-desktop.sh  reconfigure-display-manager.sh  redscreen.sh  reinstall-kubuntu.sh  run-configuration.sh  sboo-backup  sboo-github-clone-sboosali  sboo-github-list-repositories  sboo-image-resize  sboo-nix-update  sboo-plasma-unlock.sh  sboo-screenshot  sboo-skeletor  sboo-youtube-dl  screensave.sh  setup.sh  unblock-emacs-without-killing.sh  update-submodule.sh  upgrade-ubuntu-from-16-to-18.sh  xrandr-gamma
ssh/: link.sh  set-owner-and-permissions.sh
stack/: config.yaml
test/: test-bash.sh
virtualbox/: README.md  link.sh  settings.ini
x11/: xinitrc
xbindkeys/: .xbindkeysrc  .xbindkeysrc.scm  notes.txt  restart.sh  start  test.scm  xbindkeysrc  xbindkeysrc.scm
xmodmap/: .Xmodmap  sboo.xmodmap  set-capslock-to-control.xmodmap  swap_apostrophe-with-quotation.xmodmap  swap_number-row.xmodmap  swap_parentheses-with-square-brackets.xmodmap  swap_semicolon-with-colon.xmodmap  test.sh
(+333 files in other folders)
